# cursor

./: .gitignore  BETA_DEVELOPMENT_README.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CICD_VERIFICATION_REPORT.md  CLEANUP_SUMMARY.md  CORPORATE_SETUP.md  CURSOR_INTEGRATION_COMPLETE.md  CURSOR_INTEGRATION_GUIDE.md  FINAL_AUTO_STARTUP_VERIFICATION.md  FINAL_CONSISTENCY_AND_BUG_CHECK_REPORT.md  FINAL_CURSOR_INTEGRATION_STATUS.md  FINAL_NASA_250K_API_ENTERPRISE_CONFIRMATION.md  FINAL_NASA_CONSISTENCY_REPORT.md  FINAL_NASA_EFFICIENCY_VALIDATION.md  GETTING_STARTED.md  GITHUB_ALIGNMENT_COMPLETE_REPORT.md  GITHUB_CICD_FIXES.md  GITHUB_UPLOAD_STATUS.md  GUI_INTERFACE_OVERVIEW.md  INSTALLATION_REPORT.md  ISOLATED_DEPLOYMENT_STRATEGY.md  LICENSE  Moneriumapi-v2.yml  NASA_CODE_CONSISTENCY_REPORT.md  NASA_ENTERPRISE_250K_API_MATHEMATICAL_VALIDATION.md  NASA_FLASK_VS_FASTAPI_PERFORMANCE_ANALYSIS.md  NASA_IMPLEMENTATION_SUMMARY.md  PORTABLE_NASA_SERVER_GUIDE.md  POSTGRESQL_MIGRATION_COMPLETE.md  POSTGRESQL_SETUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_SHELL_MONITOR.md  REQUIREMENTS_GUIDE.md  SHELL_MONITOR_CORRECT_SYNTAX.md  SHELL_MONITOR_FINAL_STATUS.md  SHELL_MONITOR_SUMMARY.md  UNIVERSAL_API_BRIDGE_COMPLETE_ARCHITECTURE_GUIDE.md  UNIVERSAL_API_BRIDGE_CONSISTENCY_REVIEW.md  (+46 more)
universal-api-bridge/: .env.example  .env.template  .gitignore  ADVANCED_GRPC_OPTIMIZATION_PLAN.md  API_DIAGNOSTIC_TEST.html  ARCHITECTURE_STABILITY_NOTES.md  ARCHIVE_NOTICE.md  AUTOMATIC_STARTUP_GUIDE.md  BACKEND_ISSUES_REPORT.md  CNN_INTEGRATION_SUMMARY.md  COMPLETE_AUTOMATIC_STARTUP_GUIDE.md  COMPREHENSIVE_FIXES_APPLIED.md  CURRENTS_API_INTEGRATION_GUIDE.md  CURSOR_PROJECT_COMPREHENSIVE_SHOWCASE.html  DUAL_NEWS_FIXES_SUMMARY.md  DUAL_NEWS_SETUP_GUIDE.md  DUAL_PROVIDER_SIMULTANEOUS_FETCHING_CONFIRMED.md  DUAL_PROVIDER_STATUS_REPORT.md  END_TO_END_TEST_PLAN.md  ENHANCED_FEATURES_SUMMARY.md  ERROR_FIXES_SUMMARY.md  ERROR_LOGGING_GUIDE.md  ERROR_MONITORING_SYSTEM_GUIDE.md  FEATURE_DEMO_INSTRUCTIONS.md  FINAL_CODE_REVIEW_STATUS.md  FRONTEND_ISSUES_REPORT.md  GITHUB_SYNC_STATUS.md  (+190 more)
(+149 files in other folders)
